# purl2meta

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/purl2meta/: __init__.py  meta.py
tests/: test_meta.py
